--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     
   </head>  
   <body>
-  <div style="width:100px;height:100px;background:red;"></div>
+<div id="div" onclick="alert('test');document.getElementById('div').style.background='black';" style="width:100px;height:100px;background:red;"></div>
     </body>
 </html>
